--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>MGO CPA – Office Locations</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="min-width:320px;">
     <div class="hero-section">
         <div class="hero-left">
-            <img src="logo.png" alt="MGO CPA Logo" class="logo">
+            <img src="logo.png" alt="MGO CPA Logo" class="logo" onerror="this.onerror=null;this.src='data:image/svg+xml,%3Csvg width=\'100\' height=\'32\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Crect width=\'100\' height=\'32\' fill=\'%23f5d447\'/%3E%3Ctext x=\'50%25\' y=\'55%25\' font-size=\'16\' fill=\'%231a2c36\' font-family=\'Georgia, serif\' text-anchor=\'middle\' alignment-baseline=\'middle\'%3EMGO CPA Logo%3C/text%3E%3C/svg%3E';">
             <h1>Built to serve your needs</h1>
             <p class="hero-desc">Our global service platform is optimized to meet your needs wherever, and whenever you need us. We’ll meet for a sit down coast-to-coast and we’re available 24/7 by phone or video chat.</p>
         </div>
         <div class="hero-right">
-            <img src="hero.jpg" alt="Office Hero Image" class="hero-img">
+            <img src="hero.jpg" alt="Office Hero Image" class="hero-img" onerror="this.onerror=null;this.src='data:image/svg+xml,%3Csvg width=\'600\' height=\'380\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Crect width=\'600\' height=\'380\' fill=\'%23e6eaf0\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' font-size=\'32\' fill=\'%237e8a94\' font-family=\'Georgia, serif\' text-anchor=\'middle\' alignment-baseline=\'middle\'%3EOffice Hero Image%3C/text%3E%3C/svg%3E';">
         </div>
     </div>
     <main>
@@ -33,26 +33,11 @@
                 <span class="chip">Texas</span>
             </div>
             <div class="map-container">
-                <img src="map-placeholder.png" alt="Map placeholder" class="map-img">
+                <img src="map-placeholder.png" alt="Map placeholder" class="map-img" onerror="this.onerror=null;this.src='data:image/svg+xml,%3Csvg width=\'1100\' height=\'340\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Crect width=\'1100\' height=\'340\' fill=\'%23e6eaf0\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' font-size=\'32\' fill=\'%237e8a94\' font-family=\'Georgia, serif\' text-anchor=\'middle\' alignment-baseline=\'middle\'%3EMap placeholder%3C/text%3E%3C/svg%3E';">
             </div>
         </section>
-            <div class="office">
-                <h3>📌 Atlanta, Georgia</h3>
-                <p><strong>Address:</strong> 3550 Lenox Rd., Suite 2075, Atlanta, GA 30326 <a href="https://www.mgocpa.com/">[MGO CPA]</a></p>
-            </div>
-            <div class="office">
-                <h3>📌 Chicago, Illinois</h3>
-                <p><strong>Address:</strong> 155 North Wacker Drive, Suite 4350, Chicago, IL 60606-1742</p>
-                <p><strong>Phone:</strong> +1 (312) 488-8294 <a href="https://www.mgocpa.com/">[MGO CPA]</a></p>
-            </div>
-            <div class="office">
-                <h3>📌 Long Island, New York</h3>
-                <p><strong>Address:</strong> 445 Broadhollow Road, Suite 319, Melville, NY 11747-3601</p>
-                <p><strong>Phone:</strong> +1 (516) 409-5000</p>
-                <p><strong>Fax:</strong> +1 (516) 409-0985 <a href="https://www.mgocpa.com/">[MGO CPA]</a></p>
-            </div>
-            <div class="office">
-                <h3>📌 Austin, Texas</h3>
+        </main>
+    </body>
                 <p><strong>Address:</strong> 9442 Capital of Texas Highway North, Plaza 1, Suite 500, Austin, TX 78759</p>
                 <p><strong>Phone:</strong> +1 (512) 883-5910 <a href="https://www.mgocpa.com/">[MGO CPA]</a></p>
             </div>
@@ -84,8 +69,5 @@
             <p>This reflects MGO's dedication to providing services across various platforms and locations to meet client needs promptly. <a href="https://www.mgocpa.com/">[MGO CPA]</a></p>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2025 MGO CPA. This is a clone for demonstration purposes only.</p>
-    </footer>
 </body>
 </html>
