--- a/index.html
+++ b/index.html
@@ -1,6 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Website</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <main class="container">
+    <header class="header">
+      <img src="profile.jpg" alt="Profile Photo" class="profile-img" />
+      <h1 class="name">Your Name</h1>
+      <p class="tagline">A short, inspiring tagline goes here.</p>
+    </header>
+    <section class="about">
+      <h2>About</h2>
+      <p>Welcome to my personal website. I am a [your profession/role], passionate about [your passions/interests].</p>
+    </section>
+    <section class="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>Project One</strong> – A short description of your project or work.
+        </li>
+        <li>
+          <strong>Project Two</strong> – Another project or accomplishment.
+        </li>
+      </ul>
+    </section>
+    <section class="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
+      <p>LinkedIn: <a href="#" target="_blank">linkedin.com/in/yourprofile</a></p>
+    </section>
+  </main>
+</body>
+</html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MGO CPA – Office Locations</title>
